# MatematiC

./: CMakeLists.txt  README.md  auteurs.txt  entetesGestionGrille.h  entetesVersion1.h  entetesVersion2.h  gestionGrille.c  grille3x3.txt  grille4x4.txt  grille5x5.txt  grille6x6.txt  grille7x7.txt  main.c  version1.c  version2.c
